--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.1.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "iron-session": "^8.0.4",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
